<resources>
    <string name="app_name">slide_window</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string-array name="nav_item_activity_titles">
        <item>Notifications</item>
        <item>News</item>
        <item>Music</item>
        <item>Settings</item>
    </string-array>

    <string name="menu_questions">Common questions</string>
    <string name="menu_about_us">About us</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nickname">NickName</string>
    <string name="password">Password</string>
    <string name="remember_me">remember me?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="success">Success</string>
    <string name="bottom_image" />
    <string name="forgot_my_password">forgot my password</string>
    <string name="register">Register</string>
    <string name="nick_name" />
    <string name="type_your_password" />
    <string name="type_your_password_again" />
    <string name="type_your_email" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="swipeLeft">swipe left to log in</string>
    <string name="swipeRight">swipe right to register</string>
    <string name="big_pic_logo">Big logo picture</string>
    <string name="title_activity_login">log_in</string>
    <string name="invalid_password">Invalid password</string>
    <string name="prompt_username">User name</string>
    <string name="action_log_in_short" />
    <string name="prompt_password_again">type your password again</string>
    <string name="login">login</string>
    <string name="title_activity_slide_window">SlideWindowActivity</string>
    <string name="kaguya_sama">Kaguya-Sama</string>
    <string name="kaguya_sama_gmail_com">Kaguya-Sama@gmail.com</string>
    <string name="todo">TODO</string>
    <string name="menu_news">News</string>
    <string name="menu_account">Account</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_customise">Customise</string>
    <string name="FAQ">FAQ</string>
    <string name="menu_FAQ">FAQ</string>
    <string name="other">other</string>
    <string name="log_out">Log out</string>
    <string name="add_new_device">Add new device</string>
    <string name="profile_settings">Profile settings</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_news">ActivityNews</string>
    <string name="title_activity_delete">delete</string>
    <string name="title_activity_scrolling_delete">ScrollingActivityDelete</string>
    <string name="top_left_corner">Top left corner</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_music">Music</string>
    <string name="action_mark_all_read">mark as read</string>
    <string name="action_clear_all">clear all</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="first_story">First story</string>
    <string name="second_story">Second story</string>
    <string name="click_to_read_more">Click to read more</string>
    <string name="third_story">Third story</string>
    <string name="fourth_story">Fourth story</string>
    <string name="large_text">....................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................</string>

</resources>
