<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--home-->
        <item
            android:id="@+id/news"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_news" />
        <!--galary-->
        <item
            android:id="@+id/music"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_music" />
        <!--slideshow-->
        <item
            android:id="@+id/notification"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_notification"/>

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/FAQ"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_FAQ" />

            <item
                android:id="@+id/About_us"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_about_us" />
        </menu>
    </item>
</menu>

