<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="280dp"
    android:background="@color/colorPrimaryDarkGrey"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="187dp"
        android:layout_height="174dp"
        app:srcCompat="@drawable/avatar"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/name"
        android:layout_width="343dp"
        android:layout_height="34dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/kaguya_sama"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="177dp"
        android:layout_height="31dp"
        android:text="@string/kaguya_sama_gmail_com"
        android:textColor="@color/colorPrimary" />

</LinearLayout>
